@@ -27,57 +27,50 @@ class JController extends JObject
 	 * The base path of the controller
 	 *
 	 * @var		string
-	 * @access	protected
 	 */
-	var $_basePath = null;
+	protected $_basePath = null;
 
 	/**
 	 * The name of the controller
 	 *
 	 * @var		array
-	 * @access	protected
 	 */
-	var $_name = null;
+	protected $_name = null;
 
 	/**
 	 * Array of class methods
 	 *
 	 * @var	array
-	 * @access	protected
 	 */
-	var $_methods	= null;
+	protected $_methods	= null;
 
 	/**
 	 * Array of class methods to call for a given task.
 	 *
 	 * @var	array
-	 * @access	protected
 	 */
-	var $_taskMap	= null;
+	protected $_taskMap	= null;
 
 	/**
 	 * Current or most recent task to be performed.
 	 *
 	 * @var	string
-	 * @access	protected
 	 */
-	var $_task		= null;
+	protected $_task		= null;
 
 	/**
 	 * The mapped task that was performed.
 	 *
 	 * @var	string
-	 * @access	protected
 	 */
-	var $_doTask	= null;
+	protected $_doTask	= null;
 
 	/**
 	 * The set of search directories for resources (views).
 	 *
 	 * @var array
-	 * @access	protected
 	 */
-	var $_path = array(
+	protected $_path = array(
 		'view'	=> array()
 	);
 
@@ -85,48 +78,45 @@ class JController extends JObject
 	 * URL for redirection.
 	 *
 	 * @var	string
-	 * @access	protected
 	 */
-	var $_redirect	= null;
+	protected $_redirect	= null;
 
 	/**
 	 * Redirect message.
 	 *
 	 * @var	string
-	 * @access	protected
 	 */
-	var $_message	= null;
+	protected $_message	= null;
 
 	/**
 	 * Redirect message type.
 	 *
 	 * @var	string
-	 * @access	protected
 	 */
-	var $_messageType	= null;
+	protected $_messageType	= null;
 
 	/**
 	 * ACO Section for the controller.
 	 *
 	 * @var	string
-	 * @access	protected
+	 * @deprecated 1.6 - Apr 5, 2010
 	 */
-	var $_acoSection		= null;
+	protected $_acoSection		= null;
 
 	/**
 	 * Default ACO Section value for the controller.
 	 *
 	 * @var	string
-	 * @access	protected
+	 * @deprecated 1.6 - Apr 5, 2010
 	 */
-	var $_acoSectionValue	= null;
+	protected $_acoSectionValue	= null;
 
 	/**
 	 * Method to get a singleton controller instance.
 	 *
-	 * @param	string		$name		The prefix for the controller.
-	 * @param	array		$config		An array of optional constructor options.
-	 * @return	mixed		JController derivative class or JException on error.
+	 * @param	string	The prefix for the controller.
+	 * @param	array	An array of optional constructor options.
+	 * @return	mixed	JController derivative class or JException on error.
 	 * @since	1.6
 	 */
 	public static function getInstance($prefix, $config = array())
@@ -140,7 +130,14 @@ class JController extends JObject
 		// Get the environment configuration.
 		$basePath	= array_key_exists('base_path', $config) ? $config['base_path'] : JPATH_COMPONENT;
 		$format		= JRequest::getWord('format');
-		$command	= JRequest::getCmd('task', 'display');
+		$command	= JRequest::getVar('task', 'display');
+
+		// Check for array format.
+		if (is_array($command)) {
+			$command = JFilterInput::clean(array_pop(array_keys($command)), 'cmd');
+		} else {
+			$command = JFilterInput::clean($command, 'cmd');
+		}
 
 		// Check for a controller.task command.
 		if (strpos($command, '.') !== false) {
@@ -149,7 +146,7 @@ class JController extends JObject
 
 			// Define the controller filename and path.
 			$file	= self::_createFileName('controller', array('name' => $type, 'format' => $format));
-			$path	= $basePath.DS.'controllers'.DS.$file;
+			$path	= $basePath.'/controllers/'.$file;
 
 			// Reset the task without the contoller context.
 			JRequest::setVar('task', $task);
@@ -160,7 +157,7 @@ class JController extends JObject
 
 			// Define the controller filename and path.
 			$file	= self::_createFileName('controller', array('name' => 'controller'));
-			$path	= $basePath.DS.$file;
+			$path	= $basePath.'/'.$file;
 		}
 
 		// Get the controller class name.
@@ -186,17 +183,15 @@ class JController extends JObject
 		return $instance;
 	}
 
-
 	/**
 	 * Constructor.
 	 *
-	 * @access	protected
 	 * @param	array An optional associative array of configuration settings.
 	 * Recognized key values include 'name', 'default_task', 'model_path', and
 	 * 'view_path' (this list is not meant to be comprehensive).
 	 * @since	1.5
 	 */
-	function __construct($config = array())
+	public function __construct($config = array())
 	{
 		// Initialize variables.
 		$this->_redirect	= null;
@@ -251,7 +246,7 @@ class JController extends JObject
 			// user-defined dirs
 			$this->addModelPath($config['model_path']);
 		} else {
-			$this->addModelPath($this->_basePath.DS.'models');
+			$this->addModelPath($this->_basePath.'/models');
 		}
 
 		// set the default view search path
@@ -259,21 +254,20 @@ class JController extends JObject
 			// user-defined dirs
 			$this->_setPath('view', $config['view_path']);
 		} else {
-			$this->_setPath('view', $this->_basePath.DS.'views');
+			$this->_setPath('view', $this->_basePath.'/views');
 		}
 	}
 
 	/**
 	 * Execute a task by triggering a method in the derived class.
 	 *
-	 * @access	public
 	 * @param	string The task to perform. If no matching task is found, the
 	 * '__default' task is executed, if defined.
 	 * @return	mixed|false The value returned by the called method, false in
 	 * error case.
 	 * @since	1.5
 	 */
-	function execute($task)
+	public function execute($task)
 	{
 		$this->_task = $task;
 
@@ -302,12 +296,12 @@ class JController extends JObject
 	/**
 	 * Authorization check
 	 *
-	 * @access	public
 	 * @param	string	$task	The ACO Section Value to check access on
 	 * @return	boolean	True if authorized
 	 * @since	1.5
+	 * @deprecated 1.6 - Apr 5, 2010
 	 */
-	function authorize($task)
+	public function authorize($task)
 	{
 		// Only do access check if the aco section is set
 		if ($this->_acoSection) {
@@ -317,7 +311,7 @@ class JController extends JObject
 				$task = $this->_acoSectionValue;
 			}
 			// Get the JUser object for the current user and return the authorization boolean
-			$user = & JFactory::getUser();
+			$user = JFactory::getUser();
 			return $user->authorize($this->_acoSection, $task);
 		} else {
 			// Nothing set, nothing to check... so obviously its ok :)
@@ -331,22 +325,22 @@ class JController extends JObject
 	 * This function is provide as a default implementation, in most cases
 	 * you will need to override it in your own controllers.
 	 *
-	 * @param	boolean	$cachable	If true, the view output will be cached
-	 * @param	array	$urlparams	An array of safe url parameters and their variable types, for valid values see {@link JFilterInput::clean()}.
+	 * @param	boolean	If true, the view output will be cached
+	 * @param	array	An array of safe url parameters and their variable types, for valid values see {@link JFilterInput::clean()}.
 	 * @since	1.5
 	 */
-	public function display($cachable=false,$urlparams=false)
+	public function display($cachable = false, $urlparams = false)
 	{
-		$document = &JFactory::getDocument();
+		$document = JFactory::getDocument();
 
 		$viewType	= $document->getType();
 		$viewName	= JRequest::getCmd('view', $this->getName());
 		$viewLayout	= JRequest::getCmd('layout', 'default');
 
-		$view = & $this->getView($viewName, $viewType, '', array('base_path'=>$this->_basePath));
+		$view = $this->getView($viewName, $viewType, '', array('base_path'=>$this->_basePath));
 
 		// Get/Create the model
-		if ($model = & $this->getModel($viewName)) {
+		if ($model = $this->getModel($viewName)) {
 			// Push the model into the view (as default)
 			$view->setModel($model, true);
 		}
@@ -358,27 +352,27 @@ class JController extends JObject
 
 		// Display the view
 		if ($cachable && $viewType != 'feed') {
-			$option = JRequest::getCmd('option');
-			$cache = &JFactory::getCache($option, 'view');
-				
+			$option	= JRequest::getCmd('option');
+			$cache	= JFactory::getCache($option, 'view');
+
 			if (is_array($urlparams)) {
-				$app = & JFactory::getApplication();
-				
+				$app = JFactory::getApplication();
+
 				$registeredurlparams = $app->get('registeredurlparams');
 
 				if (empty($registeredurlparams)) {
 					$registeredurlparams = new stdClass();
 				}
-				
+
 				foreach ($urlparams AS $key => $value) {
-				// add your safe url parameters with variable type as value {@see JFilterInput::clean()}.
-				$registeredurlparams->$key = $value;
-				$app->set('registeredurlparams', $registeredurlparams);
+					// add your safe url parameters with variable type as value {@see JFilterInput::clean()}.
+					$registeredurlparams->$key = $value;
+					$app->set('registeredurlparams', $registeredurlparams);
 				}
 			}
-				
+
 			$cache->get($view, 'display');
-				
+
 		} else {
 			$view->display();
 		}
@@ -387,14 +381,13 @@ class JController extends JObject
 	/**
 	 * Redirects the browser or returns false if no redirect is set.
 	 *
-	 * @access	public
 	 * @return	boolean	False if no redirect exists.
 	 * @since	1.5
 	 */
-	function redirect()
+	public function redirect()
 	{
 		if ($this->_redirect) {
-			$app = &JFactory::getApplication();
+			$app = JFactory::getApplication();
 			$app->redirect($this->_redirect, $this->_message, $this->_messageType);
 		}
 		return false;
@@ -403,14 +396,13 @@ class JController extends JObject
 	/**
 	 * Method to get a model object, loading it if required.
 	 *
-	 * @access	public
 	 * @param	string	The model name. Optional.
 	 * @param	string	The class prefix. Optional.
 	 * @param	array	Configuration array for model. Optional.
 	 * @return	object	The model.
 	 * @since	1.5
 	 */
-	function getModel($name = '', $prefix = '', $config = array())
+	public function getModel($name = '', $prefix = '', $config = array())
 	{
 		if (empty($name)) {
 			$name = $this->getName();
@@ -425,12 +417,11 @@ class JController extends JObject
 			$model->setState('task', $this->_task);
 
 			// Lets get the application object and set menu information if its available
-			$app	= &JFactory::getApplication();
-			$menu	= &$app->getMenu();
-			if (is_object($menu))
-			{
-				if ($item = $menu->getActive())
-				{
+			$app	= JFactory::getApplication();
+			$menu	= $app->getMenu();
+
+			if (is_object($menu)) {
+				if ($item = $menu->getActive()) {
 					$params	= &$menu->getParams($item->id);
 					// Set Default State Data
 					$model->setState('parameters.menu', $params);
@@ -443,11 +434,10 @@ class JController extends JObject
 	/**
 	 * Adds to the stack of model paths in LIFO order.
 	 *
-	 * @static
 	 * @param	string|array The directory (string), or list of directories (array) to add.
 	 * @return	void
 	 */
-	function addModelPath($path)
+	public static function addModelPath($path)
 	{
 		jimport('joomla.application.component.model');
 		JModel::addIncludePath($path);
@@ -455,11 +445,11 @@ class JController extends JObject
 
 	/**
 	 * Gets the available tasks in the controller.
-	 * @access	public
+	 *
 	 * @return	array Array[i] of task names.
 	 * @since	1.5
 	 */
-	function getTasks()
+	public function getTasks()
 	{
 		return $this->_methods;
 	}
@@ -467,11 +457,10 @@ class JController extends JObject
 	/**
 	 * Get the last task that is or was to be performed.
 	 *
-	 * @access	public
 	 * @return	string The task that was or is being performed.
 	 * @since	1.5
 	 */
-	function getTask()
+	public function getTask()
 	{
 		return $this->_task;
 	}
@@ -482,18 +471,17 @@ class JController extends JObject
 	 * The dispatcher name by default parsed using the classname, or it can be set
 	 * by passing a $config['name'] in the class constructor
 	 *
-	 * @access	public
 	 * @return	string The name of the dispatcher
 	 * @since	1.5
 	 */
-	function getName()
+	public function getName()
 	{
 		$name = $this->_name;
 
 		if (empty($name)) {
 			$r = null;
 			if (!preg_match('/(.*)Controller/i', get_class($this), $r)) {
-				JError::raiseError(500, "JLIB_APPLICATION_ERROR_CONTROLLER_GET_NAME");
+				JError::raiseError(500, JText::_('JLIB_APPLICATION_ERROR_CONTROLLER_GET_NAME'));
 			}
 			$name = strtolower($r[1]);
 		}
@@ -504,28 +492,29 @@ class JController extends JObject
 	/**
 	 * Method to get a reference to the current view and load it if necessary.
 	 *
-	 * @access	public
-	 * @param	string	The view name. Optional, defaults to the controller
-	 * name.
+	 * @param	string	The view name. Optional, defaults to the controller name.
 	 * @param	string	The view type. Optional.
 	 * @param	string	The class prefix. Optional.
 	 * @param	array	Configuration array for view. Optional.
 	 * @return	object	Reference to the view or an error.
 	 * @since	1.5
 	 */
-	function getView($name = '', $type = '', $prefix = '', $config = array())
+	public function getView($name = '', $type = '', $prefix = '', $config = array())
 	{
 		static $views;
 
 		if (!isset($views)) {
 			$views = array();
 		}
+
 		if (empty($name)) {
 			$name = $this->getName();
 		}
+
 		if (empty($prefix)) {
 			$prefix = $this->getName() . 'View';
 		}
+
 		if (empty($views[$name])) {
 			if ($view = & $this->_createView($name, $prefix, $type, $config)) {
 				$views[$name] = & $view;
@@ -542,12 +531,10 @@ class JController extends JObject
 	/**
 	 * Add one or more view paths to the controller's stack, in LIFO order.
 	 *
-	 * @static
-	 * @param	string|array The directory (string), or list of directories
-	 * (array) to add.
+	 * @param	string|array The directory (string), or list of directories (array) to add.
 	 * @return	void
 	 */
-	function addViewPath($path)
+	public function addViewPath($path)
 	{
 		$this->_addPath('view', $path);
 	}
@@ -555,13 +542,12 @@ class JController extends JObject
 	/**
 	 * Register (map) a task to a method in the class.
 	 *
-	 * @access	public
 	 * @param	string	The task.
 	 * @param	string	The name of the method in the derived class to perform for this task.
 	 * @return	void
 	 * @since	1.5
 	 */
-	function registerTask($task, $method)
+	public function registerTask($task, $method)
 	{
 		if (in_array(strtolower($method), $this->_methods)) {
 			$this->_taskMap[strtolower($task)] = $method;
@@ -571,13 +557,11 @@ class JController extends JObject
 	/**
 	 * Register the default task to perform if a mapping is not found.
 	 *
-	 * @access	public
-	 * @param	string The name of the method in the derived class to perform if
-	 * a named task is not found.
+	 * @param	string The name of the method in the derived class to perform if a named task is not found.
 	 * @return	void
 	 * @since	1.5
 	 */
-	function registerDefaultTask($method)
+	public function registerDefaultTask($method)
 	{
 		$this->registerTask('__default', $method);
 	}
@@ -585,49 +569,51 @@ class JController extends JObject
 	/**
 	 * Sets the internal message that is passed with a redirect
 	 *
-	 * @access	public
-	 * @param	string	The message
+	 * @param	string	Message to display on redirect.
+	 * @param	string	Message type (since 1.6). Optional, defaults to 'message'.
 	 * @return	string	Previous message
 	 * @since	1.5
 	 */
-	function setMessage($text)
+	public function setMessage($text, $type = 'message')
 	{
-		$previous		= $this->_message;
-		$this->_message = $text;
+		$previous			= $this->_message;
+		$this->_message		= $text;
+		$this->_messageType	= $type;
+
 		return $previous;
 	}
 
 	/**
 	 * Set a URL for browser redirection.
 	 *
-	 * @access	public
 	 * @param	string URL to redirect to.
-	 * @param	string	Message to display on redirect. Optional, defaults to
-	 *			value set internally by controller, if any.
+	 * @param	string	Message to display on redirect. Optional, defaults to value set internally by controller, if any.
 	 * @param	string	Message type. Optional, defaults to 'message'.
 	 * @return	void
 	 * @since	1.5
 	 */
-	function setRedirect($url, $msg = null, $type = 'message')
+	public function setRedirect($url, $msg = null, $type = null)
 	{
 		$this->_redirect = $url;
 		if ($msg !== null) {
 			// controller may have set this directly
 			$this->_message	= $msg;
 		}
-		$this->_messageType	= $type;
+
+		// Ensure the type is not overwritten by a previous call to setMessage.
+		$this->_messageType	= ($type === null || empty($this->_messageType)) ? 'message' : $type;
 	}
 
 	/**
 	 * Sets the access control levels.
 	 *
-	 * @access	public
 	 * @param	string The ACO section (eg, the component).
 	 * @param	string The ACO section value (if using a constant value).
 	 * @return	void
 	 * @since	1.5
+	 * @deprecated 1.6 - Apr 5, 2010
 	 */
-	function setAccessControl($section, $value = null)
+	public function setAccessControl($section, $value = null)
 	{
 		$this->_acoSection = $section;
 		$this->_acoSectionValue = $value;
@@ -636,15 +622,13 @@ class JController extends JObject
 	/**
 	 * Method to load and return a model object.
 	 *
-	 * @access	private
 	 * @param	string  The name of the model.
 	 * @param	string	Optional model prefix.
 	 * @param	array	Configuration array for the model. Optional.
-	 * @return	mixed	Model object on success; otherwise null
-	 * failure.
+	 * @return	mixed	Model object on success; otherwise null failure.
 	 * @since	1.5
 	 */
-	function _createModel($name, $prefix = '', $config = array())
+	protected function _createModel($name, $prefix = '', $config = array())
 	{
 		// Clean the model name
 		$modelName		= preg_replace('/[^A-Z0-9_]/i', '', $name);
@@ -662,7 +646,6 @@ class JController extends JObject
 	 * Note the "name, prefix, type" order of parameters, which differs from the
 	 * "name, type, prefix" order used in related public methods.
 	 *
-	 * @access	private
 	 * @param	string	The name of the view.
 	 * @param	string	Optional prefix for the view class name.
 	 * @param	string	The type of view.
@@ -670,7 +653,7 @@ class JController extends JObject
 	 * @return	mixed	View object on success; null or error result on failure.
 	 * @since	1.5
 	 */
-	function _createView($name, $prefix = '', $type = '', $config = array())
+	protected function _createView($name, $prefix = '', $type = '', $config = array())
 	{
 		// Clean the view name
 		$viewName		= preg_replace('/[^A-Z0-9_]/i', '', $name);
@@ -705,12 +688,10 @@ class JController extends JObject
 	/**
 	 * Sets an entire array of search paths for resources.
 	 *
-	 * @access	protected
-	 * @param	string	The type of path to set, typically 'view' or 'model'.
-	 * @param	string|array	The new set of search paths. If null or false,
-	 * resets to the current directory only.
+	 * @param	string			The type of path to set, typically 'view' or 'model'.
+	 * @param	string|array	The new set of search paths. If null or false, resets to the current directory only.
 	 */
-	function _setPath($type, $path)
+	protected function _setPath($type, $path)
 	{
 		// clear out the prior search dirs
 		$this->_path[$type] = array();
@@ -720,14 +701,13 @@ class JController extends JObject
 	}
 
 	/**
-	 * Adds to the search path for templates and resources.
-	 *
-	 * @access	protected
-	 * @param	string The path type (e.g. 'model', 'view'.
-	 * @param	string|array The directory or stream to search.
-	 * @return	void
-	 */
-	function _addPath($type, $path)
+	* Adds to the search path for templates and resources.
+	*
+	* @param	string			The path type (e.g. 'model', 'view'.
+	* @param	string|array	The directory or stream to search.
+	* @return	void
+	*/
+	protected function _addPath($type, $path)
 	{
 		// just force path to array
 		settype($path, 'array');
@@ -756,12 +736,11 @@ class JController extends JObject
 	 * @return	string	The filename.
 	 * @since	1.5
 	 */
-	private static function _createFileName($type, $parts = array())
+	protected static function _createFileName($type, $parts = array())
 	{
 		$filename = '';
 
-		switch ($type)
-		{
+		switch ($type) {
 			case 'controller':
 				if (!empty($parts['format'])) {
 					if ($parts['format'] == 'html') {
@@ -781,7 +760,7 @@ class JController extends JObject
 					$parts['type'] = '.'.$parts['type'];
 				}
 
-				$filename = strtolower($parts['name']).DS.'view'.$parts['type'].'.php';
+				$filename = strtolower($parts['name']).'/view'.$parts['type'].'.php';
 			break;
 		}
 		return $filename;
